proj1/test/test_11811806_1.out
Error type A at Line 1: unknown lexeme 0506var
Error type B at Line 2: Multiple ';'
Error type A at Line 4: unknown lexeme 1_arg
Error type A at Line 5: unknown lexeme '\x888'
Error type A at Line 6: unknown lexeme -0099
Error type A at Line 7: unknown lexeme 00.00
Error type B at Line 10: Missing semicolon ';'
