proj1/test/test_11811806_1.spl
int 0506var;
char myChar;;

int main(int _a, int 1_arg){
  char hex = '\x888';
  int leadingZero = -0099;
  float wrongFloat = 00.00;
  float validFloat = 0.0;
  int validInt = 0x0;
  return 0
}